# PROJECT_Y_SERVER

./: .env.example  .gitignore  Cargo.toml  dump.rdb
libs/postgres/: Cargo.toml
libs/postgres/migrations/2023-02-26-033157_friendships/: up.sql
libs/postgres/migrations/2023-02-27-192929_friendships/: down.sql  up.sql
libs/postgres/migrations/2023-02-27-202122_friend_nullables/: down.sql  up.sql
libs/postgres/src/: lib.rs  models.rs  schema.rs
libs/redis/: Cargo.toml
libs/redis/src/: lib.rs
libs/server/: Cargo.toml
libs/server/src/: lib.rs
src/: lib.rs
