[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
axum = "0.6.7"
tower = { version = "0.4.13", features = ["util"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
