[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
axum = "0.6.7"
tower = { version = "0.4.13", features = ["util"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
dotenvy = "0.15.6"
jsonwebtoken = "8.2.0"
aws-sdk-s3 = "0.24.0"
aws-config = "0.54.1"
chrono = "0.4.23"
redis = { version = "0.22.3", features = ["r2d2"] }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
postgres = { path = "../postgres" }