[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
tokio = { version = "1.25.0", features = ["full"] }
tower = { version ="0.4.13", features = ["util"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
jsonwebtoken = { version = "8.2.0", features = ["use_pem"] }
chrono = "0.4.23"
aws-sdk-s3 = "0.24.0"
aws-config = "0.54.1"
redis = { path = "../redis" }
postgres = { path = "../postgres" }
lazy_static = "1.4.0"
uuid = { version = "1.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
lettre = "0.10.3"
ring = "0.16.20"
